compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__assigned_function_annotation.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 291
expression: "let f = fn(x: Int) { x } f(1.0)"
---
----- SOURCE CODE
let f = fn(x: Int) { x } f(1.0)

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.rakun:1:28
  │
1 │ let f = fn(x: Int) { x } f(1.0)
  │                            ^^^

Expected type:

    Int

Found type:

    Float
